--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,10 @@
 <resources>
-    <string name="app_name">CafeteriaApp</string>
+    <string name="app_name">My Application</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="cart">Cart</string>
+    <string name="search">Search</string>
+    <string name="description">Description</string>
+    <string name="meal_name">Meal Name</string>
+    <string name="add_to_cart">Add to cart</string>
 </resources>
